[gd_scene load_steps=2 format=2]

[ext_resource path="res://Entities/CameraSetArea.gd" type="Script" id=1]

[node name="CameraSetArea" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -144, -880, 144, -880, 136, 600, -120, 600 )

[node name="TopTween" type="Tween" parent="."]

[node name="BottomTween" type="Tween" parent="."]

[connection signal="body_entered" from="." to="." method="_on_CameraSetArea_body_entered"]
[connection signal="tween_step" from="TopTween" to="." method="_on_TopTween_tween_step"]
[connection signal="tween_step" from="BottomTween" to="." method="_on_BottomTween_tween_step"]
